# CXLMemSim

./: .gitignore  CMakeLists.txt  DEPLOYMENT_QUICKSTART.md  DOCS_INDEX.md  GUI_IMPROVEMENTS.md  GUI调试指南.md  QUICKSTART.md  README.md  UI_REFACTOR_PLAN.md  experiment_data.csv  main.cpp  run_gui.sh  毕设撰写指导说明书.md  科研功能优化说明.md  系统演示指南.md  项目优化总结.md
backend/: CMakeLists.txt
backend/include/analyzer/: experiment_manager.h  latency_model.h  timing_analyzer.h
backend/include/topology/: topology_graph.h
backend/include/tracer/: mock_tracer.h  pebs_tracer.h  tracer_interface.h
backend/src/analyzer/: experiment_manager.cpp  latency_model.cpp  timing_analyzer.cpp
backend/src/topology/: topology_graph.cpp
backend/src/tracer/: mock_tracer.cpp  pebs_tracer.cpp  tracer_factory.cpp
common/: CMakeLists.txt
common/include/: config_parser.h
common/src/: config_parser.cpp
configs/: standard_experiments.json
configs/examples/: simple_cxl.json
demos/: simple_simulation.cpp
docs/: DESIGN_DOCUMENT.md  PHYSICAL_DEPLOYMENT.md  research_guide.md  中期报告PPT制作指导.md  开题报告.md  毕业设计说明书_第一部分_绪论与相关技术.md  毕业设计说明书_第三部分_测试与总结.md  毕业设计说明书_第二部分_系统设计与实现.md  答辩PPT逐页讲解稿_上.md  答辩PPT逐页讲解稿_下.md  系统架构逐函数深度解析.md
docs/毕业设计指导/: 毕业设计撰写完整指导方案_第1部分.md  毕业设计撰写完整指导方案_第2部分_系统设计章节.md  毕业设计撰写完整指导方案_第3部分_系统设计续.md  毕业设计撰写完整指导方案_第4部分_前端与实验.md  毕业设计撰写完整指导方案_第5部分_总结与建议.md  毕业设计撰写指导_新第4章_子系统设计与实现.md  毕业设计撰写指导_补充第3章_需求分析与总体设计.md  毕业设计撰写指导方案_总索引.md
docx/: 1.docx
frontend/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
frontend/widgets/: benchmark_page_widget.cpp  benchmark_page_widget.h  benchmark_widget.cpp  benchmark_widget.h  comparison_widget.cpp  comparison_widget.h  config_tree_widget.cpp  config_tree_widget.h  experiment_panel_widget.cpp  experiment_panel_widget.h  export_dialog.cpp  export_dialog.h  export_page_widget.cpp  export_page_widget.h  metrics_panel.cpp  metrics_panel.h  realtime_chart_widget.cpp  realtime_chart_widget.h  sidebar_widget.cpp  sidebar_widget.h  styled_dialogs.cpp  styled_dialogs.h  topology_editor_widget.cpp  topology_editor_widget.h  workload_config_widget.cpp  workload_config_widget.h
planning/: architecture_updates.md  execution_plan.md  phase1_completion_report.md  phase2_completion_summary.md  phase2_final_report.md  phase2_progress_report.md  phase3_advanced_features_report.md  phase3_final_report.md  phase3_gui_enhancement_report.md  phase3_gui_implementation_report.md  step1_environment_setup.md  vm_capabilities_report.md  vm_to_physical_migration_strategy.md
scripts/: collect_diagnostic_info.sh  create_project_structure.sh  deploy_physical.sh  install_dependencies.sh  install_qt6.sh  plot_results.py  run_experiments.sh  setup_vm.sh  verify_environment.sh
tests/: CMakeLists.txt  test_config_parser.cpp  test_integration.cpp  test_tracer.cpp
tests/data/: sample_trace.json
